--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -14,4 +14,15 @@
             </tr>
         <% })  %>
     </table>
+    <div>
+        <h2>Card</h2>
+        <div class="card">
+            <img src="/img/logo eoffice baru .jpg" alt="" style="width: 100%">
+            <div class="container">
+                <h4><b>Express JS</b></h4>
+                <p>Lorem</p>
+            </div>
+        </div>
+    </div>
+    <button onclick="show()">Show Message</button>
 
